# wasm-game-of-life

./: 0.bootstrap.js  Cargo.toml  LICENSE_MIT  README.md  bootstrap.js  index.html
src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json  render.js
