[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Imogen Hardy <imogen.hardy@guardian.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
lto = true
